[gd_scene load_steps=6 format=3 uid="uid://bqlkj4ar8q1ws"]

[ext_resource type="Script" uid="uid://dpeg2oajgjsu3" path="res://src/ConveyorAssembly/belt_conveyor_assembly.gd" id="1_upkoq"]
[ext_resource type="PackedScene" uid="uid://dm55h6ap605bw" path="res://parts/BeltConveyor.tscn" id="2_rxjsx"]
[ext_resource type="PackedScene" uid="uid://pf3t2vk7fmn" path="res://parts/assemblies/SideGuardsAssembly.tscn" id="3_rxjsx"]
[ext_resource type="PackedScene" uid="uid://cg4ii4p426pqb" path="res://parts/assemblies/ConveyorLegsAssembly.tscn" id="4_xgosv"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_hcu6p"]
friction = 0.5

[node name="BeltConveyorAssembly" type="Node3D"]
script = ExtResource("1_upkoq")

[node name="Conveyor" parent="." instance=ExtResource("2_rxjsx")]
unique_name_in_owner = true

[node name="SideGuardsAssembly" parent="Conveyor" instance=ExtResource("3_rxjsx")]
unique_name_in_owner = true

[node name="ConveyorLegsAssembly" parent="Conveyor" instance=ExtResource("4_xgosv")]
unique_name_in_owner = true
middle_legs_enabled = true
_middle_legs_instance_count = 1
